[gd_scene load_steps=14 format=3 uid="uid://buekxu7cfy6ki"]

[ext_resource type="Script" uid="uid://jo42poblfvfr" path="res://UI/ui.gd" id="1_c7tqi"]
[ext_resource type="Theme" uid="uid://cufj0uv2ocrn8" path="res://UI/themes/btn_left.tres" id="2_cbfhl"]
[ext_resource type="Texture2D" uid="uid://dundrqnqrlh5t" path="res://UI/icons/play.svg" id="3_4fiuh"]
[ext_resource type="Texture2D" uid="uid://i7cq8ec566xa" path="res://UI/icons/settings.svg" id="4_h81ot"]
[ext_resource type="Theme" uid="uid://duygm3k1y8si4" path="res://UI/themes/btn_center.tres" id="5_6rr40"]
[ext_resource type="Texture2D" uid="uid://dhw0rrer18ty5" path="res://UI/icons/sound.svg" id="6_0w6e5"]
[ext_resource type="Texture2D" uid="uid://dx3svvqalfym3" path="res://UI/icons/language.svg" id="7_h81ot"]
[ext_resource type="Texture2D" uid="uid://bmmsdu488xkuc" path="res://UI/icons/back.svg" id="7_o2jkc"]
[ext_resource type="AudioStream" uid="uid://1xoucgy862ie" path="res://UI/sfx/ui-button-click-8-341030.mp3" id="9_4fiuh"]
[ext_resource type="Script" uid="uid://b53kqhjf056ps" path="res://UI/langBtn.gd" id="9_h81ot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rr40"]
bg_color = Color(0.82626736, 0.15721741, 0.29111585, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h81ot"]
bg_color = Color(0.10677286, 0.71943367, 0.43595102, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27fn8"]
bg_color = Color(1, 0.5294118, 0.7254902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.08627452, 0.08627452, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7tqi")

[node name="btns" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -122.0
offset_right = 500.0
offset_bottom = 122.0
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="play" type="Button" parent="btns" groups=["ui_btn"]]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
theme = ExtResource("2_cbfhl")
action_mode = 0
text = "PLAY"
icon = ExtResource("3_4fiuh")
expand_icon = true

[node name="settings" type="Button" parent="btns" groups=["ui_btn"]]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
theme = ExtResource("2_cbfhl")
action_mode = 0
text = "SETTINGS"
icon = ExtResource("4_h81ot")
expand_icon = true

[node name="settingsMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="sound" type="Button" parent="settingsMenu" groups=["ui_btn"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
theme = ExtResource("5_6rr40")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6rr40")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h81ot")
toggle_mode = true
action_mode = 0
text = "SOUND"
icon = ExtResource("6_0w6e5")
expand_icon = true

[node name="lang" type="Button" parent="settingsMenu" groups=["ui_btn"]]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
theme = ExtResource("5_6rr40")
action_mode = 0
text = "LANGUAGE"
icon = ExtResource("7_h81ot")
expand_icon = true

[node name="back" type="Button" parent="settingsMenu" groups=["ui_btn"]]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
theme = ExtResource("5_6rr40")
theme_override_styles/normal = SubResource("StyleBoxFlat_27fn8")
action_mode = 0
text = "BACK"
icon = ExtResource("7_o2jkc")
expand_icon = true

[node name="langOptions" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -45.0
offset_right = 250.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="en" type="Button" parent="langOptions" groups=["ui_btn"]]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
theme = ExtResource("5_6rr40")
action_mode = 0
text = "ENGLISH"
expand_icon = true
script = ExtResource("9_h81ot")

[node name="ru" type="Button" parent="langOptions" groups=["ui_btn"]]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
theme = ExtResource("5_6rr40")
action_mode = 0
text = "русский"
expand_icon = true
script = ExtResource("9_h81ot")

[node name="bn" type="Button" parent="langOptions" groups=["ui_btn"]]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
theme = ExtResource("5_6rr40")
action_mode = 0
text = "বাংলা"
expand_icon = true
script = ExtResource("9_h81ot")

[node name="btnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4fiuh")

[connection signal="pressed" from="btns/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="btns/settings" to="." method="_on_settings_pressed"]
[connection signal="toggled" from="settingsMenu/sound" to="." method="_on_sounds_toggled"]
[connection signal="pressed" from="settingsMenu/lang" to="." method="_on_languageMenuBtn_pressed"]
[connection signal="pressed" from="settingsMenu/back" to="." method="_on_back_pressed"]
